# mockist-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  IMPLEMENTATION.md  LICENSING.md  RELEASING.md  SPEC.md
examples/: README.md
examples/generic/: README.md  integration.py  test_integration.py
examples/langchain/: README.md  integration.py  test_integration.py
examples/mcp/: README.md  integration.py  test_integration.py
examples/openai/: README.md  integration.py  test_integration.py
scripts/: smoke_pack.sh
src/mockist/: __init__.py  assertions.py  async_utils.py  composition.py  deep_equal.py  errors.py  harness.py  identity.py  pytest_plugin.py  recorder.py  registry.py  types.py
src/mockist/adapters/: __init__.py  generic.py  langchain.py  mcp.py  openai.py
src/mockist/cassette/: __init__.py  format.py  io.py  match.py  paths.py  redact.py  registry.py  replay.py
tests/: test_adapters_parity.py  test_assertions.py  test_cassette_compat.py  test_cassette_record_replay.py  test_generic_adapter.py  test_harness.py  test_identity.py  test_langchain_adapter.py  test_mcp_adapter.py  test_openai_adapter.py  test_package.py  test_sequence.py
tests/fixtures/cassettes/: spec_example.json
