[project]
name = "mockist"
version = "0.0.0"
description = "Local test harness for agent tool/skill boundaries — stubs, cassettes, trajectory assertions."
readme = "README.md"
license = "Elastic-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dhanvi Reddy" }]
keywords = [
    "agent",
    "ai",
    "llm",
    "mock",
    "pytest",
    "stub",
    "testing",
    "tool-calling",
    "trajectory",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
openai = []
mcp = []
langchain = []
pytest = ["pytest>=8.0", "pytest-asyncio>=0.24"]
dev = [
    "basedpyright>=1.29",
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[project.urls]
Homepage = "https://github.com/ydderd/mockist-py"
Repository = "https://github.com/ydderd/mockist-py"
Documentation = "https://github.com/ydderd/mockist-py#readme"
Issues = "https://github.com/ydderd/mockist-py/issues"
Changelog = "https://github.com/ydderd/mockist-py/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
mockist = "mockist.pytest_plugin"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mockist"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/mockist",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "basedpyright>=1.29",
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]
